@@ -13,7 +13,7 @@ public class EnchantmentChallenge1 extends DungeonPackagerConfigFields {
         super("enchantment_challenge_1_sanctum",
                 false,
                 "&2[lvl 000-200] &fEnchantment Challenge 01",
-                Arrays.asList("&fAn enchantment challenge dungeon!"),
+                List.of("&fAn enchantment challenge dungeon!"),
                 DiscordLinks.freeMinidungeons,
                 DungeonSizeCategory.SANCTUM,
                 "em_id_enchantment_challenge_1",
