@@ -5,13 +5,14 @@ import com.magmaguy.elitemobs.utils.DiscordLinks;
 import org.bukkit.World;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class KnightCastleLair extends DungeonPackagerConfigFields {
     public KnightCastleLair() {
         super("knights_castle_lair",
                 false,
                 "&2[lvl 095] &fThe Knight's Castle",
-                Arrays.asList("&fChallenge the knights of the castle!"),
+                List.of("&fChallenge the knights of the castle!"),
                 DiscordLinks.freeMinidungeons,
                 DungeonSizeCategory.LAIR,
                 "em_knight_castle",
@@ -25,6 +26,6 @@ public class KnightCastleLair extends DungeonPackagerConfigFields {
                 "&fAssault the castle!",
                 "&fNow leaving the castle!",
                 "the_knight_castle"
-                );
+        );
     }
 }
